| Summary: | ASTERISK-28045: configure script does not enforce libunbound2 version | ||
| Reporter: | Samuel Galarneau (sgalarneau) | Labels: | |
| Date Opened: | 2018-09-07 14:08:32 | Date Closed: | 2018-10-01 07:09:38 |
| Priority: | Trivial | Regression? | |
| Status: | Closed/Complete | Components: | Resources/General |
| Versions: | 15.6.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Ubuntu 12 | Attachments: | |
| Description: | Compiling 15.6.0 on Ubuntu 12 with the latest version of libunbound2 that apt-get will install results in the following compile error:
res_resolver_unbound.c:277:89: error: ‘struct ub_result’ has no member named ‘ttl’ It looks like apt-get will install 1.4.18 of the library and that field was added to the struct in 1.4.20. Would be nice if ./configure enforced the version Asterisk depends on to be installed instead of relying on a compile error. | ||
| Comments: | By: George Joseph (gjoseph) 2018-09-24 15:35:47.996-0500 Hey Sam, Should ./configure fail if the version isn't 1.5 or greater or just disable res_resolver_unbound (which is normally what we do)? By: Samuel Galarneau (sgalarneau) 2018-09-25 13:20:15.516-0500 If disabling is the normal course of action I think that makes more sense than failing. The main issue is that what I got was a compile error in the make step since ./configure did not check the library version. By: Friendly Automation (friendly-automation) 2018-10-01 07:09:39.304-0500 Change 10268 merged by Joshua Colp: configure.ac: Check for unbound version >= 1.5 [https://gerrit.asterisk.org/10268|https://gerrit.asterisk.org/10268] By: Friendly Automation (friendly-automation) 2018-10-01 07:19:44.769-0500 Change 10267 merged by Joshua Colp: configure.ac: Check for unbound version >= 1.5 [https://gerrit.asterisk.org/10267|https://gerrit.asterisk.org/10267] By: Friendly Automation (friendly-automation) 2018-10-01 07:23:07.541-0500 Change 10266 merged by Joshua Colp: configure.ac: Check for unbound version >= 1.5 [https://gerrit.asterisk.org/10266|https://gerrit.asterisk.org/10266] | ||